--- a/Thred/NotificationCell.xib
+++ b/Thred/NotificationCell.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,45 +19,73 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NotifCell" rowHeight="70" id="KGk-i7-Jjw" customClass="NotificationCell" customModule="Thred" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NotifCell" rowHeight="81" id="KGk-i7-Jjw" customClass="NotificationCell" customModule="Thred" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="81"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="81"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lP9-g1-1VD">
                         <rect key="frame" x="10" y="10" width="55" height="55"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="55" id="AaO-Lk-0yW"/>
                             <constraint firstAttribute="width" secondItem="lP9-g1-1VD" secondAttribute="height" multiplier="1:1" id="Sd1-04-88u"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Z9I-2Y-99c">
-                        <rect key="frame" x="75" y="10" width="290" height="50"/>
+                        <rect key="frame" x="75" y="10" width="290" height="61"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="&quot;Notification Message&quot; &quot;Notification Message&quot; &quot;Notification Message&quot;" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Gf-nY-RgU">
-                                <rect key="frame" x="0.0" y="0.0" width="290" height="30"/>
-                                <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="NexaW01-Regular" family="NexaW01-Regular" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-10" translatesAutoresizingMaskIntoConstraints="NO" id="CPp-cZ-alZ">
+                                <rect key="frame" x="0.0" y="0.0" width="290" height="41"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fXR-xm-qqD">
+                                        <rect key="frame" x="0.0" y="0.0" width="290" height="25"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RSD-f8-6D1">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="25"/>
+                                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="15"/>
+                                                <state key="normal" title="User">
+                                                    <color key="titleColor" name="LoadingColor"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="toUser:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="iqS-oW-L0j"/>
+                                                </connections>
+                                            </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qKE-IW-b5p">
+                                                <rect key="frame" x="50" y="0.0" width="240" height="25"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="u0i-R9-s38"/>
+                                        </constraints>
+                                    </stackView>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Notification Message" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Gf-nY-RgU">
+                                        <rect key="frame" x="0.0" y="15" width="290" height="26"/>
+                                        <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="NexaW01-Regular" family="NexaW01-Regular" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Timestamp&quot;" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="puQ-i9-hhY">
-                                <rect key="frame" x="0.0" y="30" width="290" height="20"/>
+                                <rect key="frame" x="0.0" y="41" width="290" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="1h6-JH-swk"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="13"/>
+                                <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="12"/>
                                 <color key="textColor" systemColor="tertiaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                     </stackView>
-                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="awq-R6-wTd">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XQN-ZK-fed">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="81"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This notification does not exist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="6aF-VJ-sad">
-                                <rect key="frame" x="20" y="20" width="335" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This notification does not exist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vkS-5F-mWg">
+                                <rect key="frame" x="20" y="20" width="335" height="41"/>
                                 <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="16"/>
                                 <color key="textColor" systemColor="systemFillColor" red="0.47058823529999999" green="0.47058823529999999" blue="0.50196078430000002" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -64,34 +93,41 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6aF-VJ-sad" firstAttribute="leading" secondItem="awq-R6-wTd" secondAttribute="leading" constant="20" symbolic="YES" id="8hb-wb-tOH"/>
-                            <constraint firstItem="6aF-VJ-sad" firstAttribute="top" secondItem="awq-R6-wTd" secondAttribute="top" constant="20" symbolic="YES" id="8wG-fG-EyS"/>
-                            <constraint firstAttribute="bottom" secondItem="6aF-VJ-sad" secondAttribute="bottom" constant="20" symbolic="YES" id="lrm-cW-SaT"/>
-                            <constraint firstAttribute="trailing" secondItem="6aF-VJ-sad" secondAttribute="trailing" constant="20" symbolic="YES" id="yaM-SU-W2y"/>
+                            <constraint firstAttribute="trailing" secondItem="vkS-5F-mWg" secondAttribute="trailing" constant="20" symbolic="YES" id="9GA-Yc-K4k"/>
+                            <constraint firstItem="vkS-5F-mWg" firstAttribute="top" secondItem="XQN-ZK-fed" secondAttribute="top" constant="20" symbolic="YES" id="I6V-Jp-Af0"/>
+                            <constraint firstItem="vkS-5F-mWg" firstAttribute="leading" secondItem="XQN-ZK-fed" secondAttribute="leading" constant="20" symbolic="YES" id="LxD-jy-e4N"/>
+                            <constraint firstAttribute="bottom" secondItem="vkS-5F-mWg" secondAttribute="bottom" constant="20" symbolic="YES" id="pom-nu-QrU"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="lP9-g1-1VD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="95n-ga-CON"/>
-                    <constraint firstAttribute="trailing" secondItem="awq-R6-wTd" secondAttribute="trailing" id="D7R-Gy-P8I"/>
                     <constraint firstAttribute="trailing" secondItem="Z9I-2Y-99c" secondAttribute="trailing" constant="10" id="JnC-Ge-kAj"/>
+                    <constraint firstAttribute="bottom" secondItem="XQN-ZK-fed" secondAttribute="bottom" id="Kf2-9K-7VT"/>
                     <constraint firstAttribute="bottom" secondItem="Z9I-2Y-99c" secondAttribute="bottom" constant="10" id="Nfo-fy-TzS"/>
                     <constraint firstItem="Z9I-2Y-99c" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="RSk-yZ-SC4"/>
-                    <constraint firstItem="awq-R6-wTd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ZEi-AT-6pZ"/>
-                    <constraint firstAttribute="bottom" secondItem="awq-R6-wTd" secondAttribute="bottom" id="ehR-Ed-kpq"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lP9-g1-1VD" secondAttribute="bottom" constant="10" id="dge-O4-Y9v"/>
+                    <constraint firstItem="XQN-ZK-fed" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="doe-H6-PwP"/>
                     <constraint firstItem="lP9-g1-1VD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="eoC-o5-fUX"/>
                     <constraint firstItem="Z9I-2Y-99c" firstAttribute="leading" secondItem="lP9-g1-1VD" secondAttribute="trailing" constant="10" id="jXF-E4-obH"/>
-                    <constraint firstItem="awq-R6-wTd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="swI-Ke-vkb"/>
+                    <constraint firstItem="XQN-ZK-fed" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="uQv-tB-pj8"/>
+                    <constraint firstAttribute="trailing" secondItem="XQN-ZK-fed" secondAttribute="trailing" id="yPe-Y1-SHJ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="nameBtn" destination="RSD-f8-6D1" id="eUd-T5-5hI"/>
                 <outlet property="notifLbl" destination="2Gf-nY-RgU" id="KfZ-IM-bbH"/>
                 <outlet property="notifPic" destination="lP9-g1-1VD" id="eB3-Uy-hki"/>
-                <outlet property="removedNotifView" destination="awq-R6-wTd" id="dnS-tS-I5t"/>
+                <outlet property="removedNotifView" destination="XQN-ZK-fed" id="N6V-0f-TqA"/>
                 <outlet property="timestampLbl" destination="puQ-i9-hhY" id="nIA-d5-HIC"/>
             </connections>
-            <point key="canvasLocation" x="225.9375" y="114.08450704225352"/>
+            <point key="canvasLocation" x="223.19999999999999" y="149.6305418719212"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="LoadingColor">
+            <color red="0.090000003576278687" green="0.75" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
