Payment Processing Complete!

--- a/Thred/Storyboards/UserVC.storyboard
+++ b/Thred/Storyboards/UserVC.storyboard
@@ -911,9 +911,9 @@ This may take a few moments...</string>
                                         <rect key="frame" x="45" y="45" width="324" height="684"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="AO1-bn-Yyd">
-                                                <rect key="frame" x="0.0" y="0.0" width="324" height="606"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="324" height="624.33333333333337"/>
                                                 <subviews>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="lCg-d5-fbk">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="lCg-d5-fbk">
                                                         <rect key="frame" x="0.0" y="0.0" width="324" height="134.33333333333334"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="zzV-cp-CmL">
@@ -946,20 +946,20 @@ This may take a few moments...</string>
                                                             </textView>
                                                         </subviews>
                                                     </stackView>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="s27-vq-Mw7">
-                                                        <rect key="frame" x="0.0" y="134.33333333333329" width="324" height="471.66666666666674"/>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="s27-vq-Mw7">
+                                                        <rect key="frame" x="0.0" y="134.33333333333331" width="324" height="489.99999999999994"/>
                                                         <subviews>
                                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="This delivery address is invalid" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H1h-co-dXW">
-                                                                <rect key="frame" x="0.0" y="0.0" width="324" height="31.666666666666668"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="324" height="50"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="999" constant="30" id="UCP-r4-YwO"/>
+                                                                    <constraint firstAttribute="height" constant="50" id="UCP-r4-YwO"/>
                                                                 </constraints>
                                                                 <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <fontDescription key="fontDescription" name="NexaW01-Regular" family="NexaW01-Regular" pointSize="13"/>
                                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                             </textView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XNn-rN-S3g">
-                                                                <rect key="frame" x="0.0" y="31.666666666666686" width="324" height="440"/>
+                                                                <rect key="frame" x="0.0" y="50" width="324" height="440"/>
                                                                 <subviews>
                                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Street Address" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="Cii-pC-D8f">
                                                                         <rect key="frame" x="0.0" y="0.0" width="324" height="65"/>
@@ -986,19 +986,19 @@ This may take a few moments...</string>
                                                                         <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" textContentType="address-level2"/>
                                                                     </textField>
                                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Province/State" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="xBo-Rc-ZHz">
-                                                                        <rect key="frame" x="0.0" y="225" width="324" height="65"/>
+                                                                        <rect key="frame" x="0.0" y="225.00000000000006" width="324" height="65"/>
                                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                                                         <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" textContentType="address-level1"/>
                                                                     </textField>
                                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Country" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="1Qk-x9-i3Y">
-                                                                        <rect key="frame" x="0.0" y="300" width="324" height="65"/>
+                                                                        <rect key="frame" x="0.0" y="300.00000000000006" width="324" height="65"/>
                                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                                                         <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" textContentType="country-name"/>
                                                                     </textField>
                                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Postal/Zip Code" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="dCk-3q-k0F">
-                                                                        <rect key="frame" x="0.0" y="375" width="324" height="65"/>
+                                                                        <rect key="frame" x="0.0" y="375.00000000000006" width="324" height="65"/>
                                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <fontDescription key="fontDescription" name="NexaW01-Heavy" family="NexaW01-Heavy" pointSize="17"/>
                                                                         <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" textContentType="postal-code"/>
@@ -1010,7 +1010,7 @@ This may take a few moments...</string>
                                                 </subviews>
                                             </stackView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qvz-uH-gaz">
-                                                <rect key="frame" x="0.0" y="606" width="324" height="78"/>
+                                                <rect key="frame" x="0.0" y="624.33333333333337" width="324" height="59.666666666666629"/>
                                             </view>
                                         </subviews>
                                     </stackView>
